--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
       <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink hover:opacity-50">
         <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow hover:shadow-2xl">
-          <a href="#" class="flex-wrap no-underline hover:no-underline">
+          <a  class="flex-wrap no-underline hover:no-underline">
             <p class="w-full font-bold text-2xl text-gray-800 px-6">
               PCBWAY - 2020
             </p>
@@ -378,7 +378,7 @@
                 Lorem ipsum dolor sit amet.
               </div> -->
 
-            <img class=" ml-10 my-10 w-4/5  z-50 rounded-full" src="images/sponsors/PCBWAY.png" />
+            <img class=" ml-10 my-20 w-4/5  z-50 rounded-full" src="images/sponsors/pcbway_logo.jpg" />
 
           </a>
 
@@ -387,11 +387,11 @@
       </div>
       <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink hover:opacity-50">
         <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow hover:shadow-2xl">
-          <a href="#" class="flex-wrap no-underline hover:no-underline">
+          <a  class="flex-wrap no-underline hover:no-underline">
             <div class="w-full font-bold text-2xl text-gray-800 px-6">
               Ezz Steal - 2017
             </div>
-            <img class=" ml-10 my-10 w-4/5  z-50" src="images/sponsors/ezzsteel.png" />
+            <img class=" ml-10 w-4/5  z-50" src="images/sponsors/ezz_steel_logo_cp.jpg" />
 
           </a>
         </div>
