Added support for Onduis Analytics
Added support for Onduis Analytics, users can create accounts on Onduis.com and after adding website, the tracker will work automatically

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
       }
     </style>
+    
+    <!--- Added support for Onduis Analytics Seamless Tracking -->
+
+     <script data-host="https://onduis.com" data-dnt="true" src="https://magic.onduis.com/js/script.js" id="ZwSg9rf6GA" async defer></script>
+    
   </head>
   <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <!--Nav-->
